--- a/.github/workflows/update-timestats.yml
+++ b/.github/workflows/update-timestats.yml
@@ -13,19 +13,19 @@ jobs:
         with:
           COMMIT_BY_ME: "False"
           COMMIT_MESSAGE: "Updated dev metrics"
-          COMMIT_USERNAME: "guilyx"
-          COMMIT_EMAIL: "erwin.lejeune15@gmail.com"
+          COMMIT_USERNAME: "yunus25jmi1"
+          COMMIT_EMAIL: "admin@yunuscollege.eu.org"
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_OS: "False"
           SHOW_PROJECTS: "True"
           SHOW_UPDATED_DATE: "True"
-          SHOW_PROFILE_VIEWS: "False"
+          SHOW_PROFILE_VIEWS: "True"
           SHOW_EDITORS: "False"
           SHOW_LANGUAGE: "True"
-          SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_LANGUAGE_PER_REPO: "True"
           SHOW_LINES_OF_CODE: "True"
           SHOW_COMMIT: "True"
-          SHOW_LOC_CHART: "False"
+          SHOW_LOC_CHART: "True"
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_SHORT_INFO: "True"
