Add GitHub Token Setup guide and backup README.md file
- Created GITHUB_TOKEN_SETUP.md for instructions on setting up a GitHub Personal Access Token for private contributions.
- Added a backup of the existing README.md file to preserve previous content.

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -55,6 +55,8 @@ jobs:
         echo "📊 Stats: $TOTAL_REPOS repos, $FOLLOWERS followers, $FOLLOWING following"
     
     - name: 🚀 Run Contribution Update Script
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         # Make script executable
         chmod +x scripts/update-contributions.sh
