--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -56,7 +56,7 @@ jobs:
     
     - name: 🚀 Run Contribution Update Script
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
         # Make script executable
         chmod +x scripts/update-contributions.sh
